--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://testeorientacaovocacional.com.br/klar/index.html">
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://joni.ahahouse.com/klar/index.html">
